# eden

./: .copier-answers.yml  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/agents/: security-reviewer.md
.claude/hooks/: block-env.py  ruff-format.py
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml
scripts/: batch_generate_rag_distillation.sh  check_coverage.py
src/eden/: __init__.py  azure_client.py  data_utils.py  openai_client.py
src/eden/rag/: __init__.py  build_index.py  build_retriever.py  cli.py  rag.py  server.py
src/eden/rag/static/: index.html
src/eden/scraper/: __init__.py  scrape_advice.py  scrape_pests.py  scrape_plants.py  utils.py
src/eden/synth_data_generation/: azure_client.py  generate_rag_distillation.py  generate_synthetic_queries.py  openai_client.py
templates/: question_ideas_advice.txt  question_ideas_pests.txt  question_ideas_plants.txt  synth_qa.txt  synth_qa_cross_doc.txt
tests/: test_clients.py  test_data_prep.py  test_data_utils.py  test_generate_rag_distillation.py  test_rag.py  test_rag_cli.py  test_rag_setup.py  test_scraper_parsers.py  test_server.py
training/: data_prep.py  fsdp_config.yaml  sft_config.yaml  sft_train.py
